<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!--SET LOGO IMAGE HERE -->

            <!-- FULLNAME INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextFullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/register_fullname"/>
            </android.support.design.widget.TextInputLayout>

            <!-- EMAIL FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/register_email"/>
            </android.support.design.widget.TextInputLayout>

            <!-- CPF INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextCpf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:maxLength="14"
                        android:hint="@string/register_cpf"/>
            </android.support.design.widget.TextInputLayout>

            <!-- PASSWORD INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- CONFIRM PASSWORD INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexConfirmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/register_confirm_password"/>
            </android.support.design.widget.TextInputLayout>

            <!-- REGISTRATION BUTTON -->
            <Button
                    android:id="@+id/btnConfirmRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_effect"
                    android:textColor="#fff"
                    android:text="@string/register_confirm_button"/>

        </LinearLayout>
    </android.support.design.card.MaterialCardView>

</LinearLayout>
