<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!--SET LOGO IMAGE HERE -->

            <ImageView
                    android:layout_width="194dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/logo"
                    android:id="@+id/imageLogo"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:layout_margin="50dp"/>

            <!-- USERNAME INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>

            <!-- PASSWORD INPUT FIELD -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    app:passwordToggleEnabled="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <android.support.design.widget.TextInputEditText
                        android:id="@+id/editTexPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/ripple_effect"
                    android:textColor="#fff"
                    android:text="@string/login"/>

            <TextView
                    android:id="@+id/txtViewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:textAlignment="center"
                    android:text="@string/register_text"/>
        </LinearLayout>
    </android.support.design.card.MaterialCardView>

</LinearLayout>
